# django-superset

./: .env.example  .gitignore  Caddyfile  EMBEDDED_SDK_GUIDE.md  Makefile  QUICKSTART.md  README.md  SUPERSET_3.0_SETUP.md  docker-compose.yml  init-db.sql  setup.sh  start.sh  stop.sh
caddy/: Caddyfile
django/: Dockerfile  pyproject.toml  requirements.txt
django/budget/: admin.py  apps.py  models.py  urls.py  views.py  views_guest_token.py  views_superset.py
django/budget/management/commands/: configure_public_dashboard.py  load_dummy_data.py  setup_public_superset.py
django/budget/migrations/: 0001_initial.py
django/config/: asgi.py  settings.py  urls.py  wsgi.py
django/staticfiles/django_superset_integration/css/: django-superset-integration.css
django/staticfiles/django_superset_integration/js/: display-dashboard.js  get-guest-token.js  superset-embedded-sdk.js
django/templates/: base.html
django/templates/budget/: dashboard.html  index.html
django/templates/django_superset_integration/: superset-integration.html
django_app/: Dockerfile  requirements.txt
django_app/config/: settings.py  urls.py  wsgi.py
docs/: 01-apache-superset-overview.md  02-superset-api.md  03-authentication-tokens.md  04-dashboard-permissions.md  05-django-integration.md  06-implementation-complete.md  07-parameters-and-filtering.md  08-troubleshooting-guide.md  README.md
scripts/: README.md  create_public_role.py
superset/: Dockerfile  superset_config.py
superset_config/: superset_config.py
superset_dockerfile/: Dockerfile  docker-entrypoint.sh
(+11 files in other folders)
